# dklok-order-sheet-tool

./: .gitignore  README.md  main.py  pyproject.toml
src/config/: settings.py
src/core/: document_processor.py  ocr_service.py
src/gui/: main_window.py  styles.py  widgets.py
src/models/: document.py  order_item.py
src/utils/: file_utils.py  pdf_converter.py
tests/: test_copy_functions.py  test_excel_copy.py  test_models.py  test_ocr_service.py
